[project]
name = "Livenodes-PLUX"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "livenodes>=0.9.1",
    "livenodes-core-nodes>=0.9.2",
    "numpy>=1.22.1",
    "python-osc>=1.8.0",
]

[project.entry-points."livenodes.nodes"]
in_biosignalsplux = "livenodes_plux.in_biosignalsplux:In_biosignalsplux"
in_muscleban = "livenodes_plux.in_muscleban:In_muscleban"
in_riot = "livenodes_plux.in_riot:In_riot"
transform_plux_scale = "livenodes_plux.transform_plux_scale:Transform_plux_scale"


[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=7.0.1"
]

[build-system]
requires = [
    "setuptools>=60",
    "wheel",
    "setuptools_scm >= 8.0.0",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true